--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "material-ui": "^0.15.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-player": "^0.7.4",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
+    "react-vimeo": "^0.1.1",
     "validator": "^5.5.0"
   },
   "devDependencies": {
