--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   "author": "Ray Yee",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4",
+    "axios": "^0.13.1",
+    "express": "^4.14.0",
     "firebase": "^3.2.0",
     "material-ui": "^0.15.0",
+    "moment": "^2.14.1",
+    "node-env-file": "^0.1.8",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-player": "^0.7.4",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
     "react-vimeo": "^0.1.1",
-    "validator": "^5.5.0"
-  },
-  "devDependencies": {
+    "validator": "^5.5.0",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "mocha": "^2.4.5",
     "script-loader": "^0.6.1",
     "webpack": "^1.12.13",
     "style-loader": "^0.13.1"
